fixed a vertical alignment bug in firefox and safari, removing vertical-align from .topbar-search + li > *

--- a/less/navigation/topbar/topbar-search.less
+++ b/less/navigation/topbar/topbar-search.less
@@ -15,7 +15,6 @@
 
 .topbar-search + li > * {
   margin-left: 10px !important;
-  vertical-align: middle;
 }
 
 .topbar-search > form > input {
